<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingStart="11dp"
    android:paddingEnd="8dp"
    android:paddingBottom="8dp">

    <data>

        <import type="android.view.View"/>

        <variable
            name="viewModel"
            type="com.example.letstalk.viewmodels.RegistrationScreenViewModel" />

    </data>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_color"
            android:focusableInTouchMode="true">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.25" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.99" />

            <ImageView
                android:id="@+id/logo_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@null"
                android:scaleType="center"
                app:layout_constraintBottom_toTopOf="@+id/guideline_top"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.65"
                app:srcCompat="@drawable/lets_talk_neon_logo" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/main_constrainLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline_top"
                app:layout_constraintVertical_bias="0.0">

                <LinearLayout
                    android:id="@+id/name_linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/name_textView"
                        style="@style/textView_registration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:letterSpacing="0.05"
                        android:text="@string/user_name" />

                    <EditText
                        android:id="@+id/name_editText"
                        style="@style/editText_registration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name_hint"
                        android:inputType="textPersonName"
                        android:letterSpacing="0.05" />

                    <TextView
                        android:id="@+id/name_error_textView"
                        style="@style/textView_error"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="@{viewModel.isValidName() ? View.INVISIBLE : View.VISIBLE }" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/last_name_linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name_linearLayout">

                    <TextView
                        android:id="@+id/last_name_textView"
                        style="@style/textView_registration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:letterSpacing="0.05"
                        android:text="@string/user_last_name" />

                    <EditText
                        android:id="@+id/last_name_editText"
                        style="@style/editText_registration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:hint="@string/last_name_hint"
                        android:inputType="text"
                        android:letterSpacing="0.05" />

                    <TextView
                        android:id="@+id/last_name_error_textView"
                        style="@style/textView_error"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="@{viewModel.isValidLastName() ?  View.INVISIBLE : View.VISIBLE }" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/email_linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/last_name_linearLayout">

                    <TextView
                        android:id="@+id/email_textView"
                        style="@style/textView_registration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:letterSpacing="0.05"
                        android:text="@string/email" />

                    <EditText
                        android:id="@+id/email_editText"
                        style="@style/editText_registration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:hint="@string/email_hint"
                        android:inputType="textEmailAddress"
                        android:letterSpacing="0.05" />

                    <TextView
                        android:id="@+id/email_error"
                        style="@style/textView_error"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="@{viewModel.isValidEmail() ?  View.INVISIBLE : View.VISIBLE }" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/password_linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/email_linearLayout">

                    <TextView
                        android:id="@+id/password_textView"
                        style="@style/textView_registration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:letterSpacing="0.05"
                        android:text="@string/password" />

                    <EditText
                        android:id="@+id/password_editText"
                        style="@style/editText_registration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        android:letterSpacing="0.05" />

                    <TextView
                        android:id="@+id/password_error"
                        style="@style/textView_error"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="@{viewModel.isValidPassword() ?  View.INVISIBLE : View.VISIBLE }" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/confirm_password_linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/password_linearLayout">

                    <TextView
                        android:id="@+id/confirm_password_textView"
                        style="@style/textView_registration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:letterSpacing="0.05"
                        android:text="@string/confirm_password" />

                    <EditText
                        android:id="@+id/confirm_password_editText"
                        style="@style/editText_registration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        android:letterSpacing="0.05" />

                    <TextView
                        android:id="@+id/confirm_password_error"
                        style="@style/textView_error"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="@{viewModel.isValidConfirmPassword() ?  View.INVISIBLE : View.VISIBLE }" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/confirm_password_linearLayout">

                    <Button
                        android:id="@+id/registration_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="4dp"
                        android:background="@drawable/button_round_corners_purple"
                        android:fontFamily="@font/roboto_medium"
                        android:letterSpacing="0.05"
                        android:text="@string/button_registration"
                        android:textAllCaps="false" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/log_in_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:letterSpacing="0.05"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="3dp"
                android:paddingBottom="16dp"
                android:text="@string/log_in"
                android:textColor="@color/grey_color"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.48"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/main_constrainLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>