<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.LoginFragment">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.letstalk.viewmodels.LoginScreenViewModel" />

    </data>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_color"
            android:focusableInTouchMode="true">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.35" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.99" />

            <ImageView
                android:id="@+id/logo_image"
                android:requiresFadingEdge="vertical"
                android:fadingEdgeLength="15dp"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toTopOf="@+id/guideline_top"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/lets_talk_neon_logo"
                android:contentDescription="@null" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline_top">

                <LinearLayout
                    android:id="@+id/email_linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/email_textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:alpha="0.7"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="start"
                        android:letterSpacing="0.05"
                        android:text="@string/email"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/email_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/teal_700"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="start"
                        android:hint="@string/email_hint"
                        android:inputType="textEmailAddress"
                        android:letterSpacing="0.05"
                        android:singleLine="false"
                        android:text="@={viewModel.email}"
                        android:textColor="@color/white"
                        android:textColorHint="@color/teal_700"
                        android:textSize="14sp"
                        android:typeface="normal" />

                    <TextView
                        android:id="@+id/email_error_textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:textColor="@color/red_color"
                        android:textSize="14sp"
                        android:visibility="@{viewModel.isValidEmail() ? View.INVISIBLE : View.VISIBLE}" />
                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/password_constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:id="@+id/password_textView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:alpha="0.7"
                        android:fontFamily="@font/roboto_medium"
                        android:letterSpacing="0.05"
                        android:text="@string/password"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/password_editText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/teal_700"
                        android:fontFamily="@font/roboto_medium"
                        android:hint="@string/password_hint"
                        android:imeOptions="actionGo"
                        android:letterSpacing="0.05"
                        android:text="@={viewModel.password}"
                        android:textColor="@color/white"
                        android:textColorHint="@color/teal_700"
                        android:textSize="14sp"
                        android:typeface="normal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/password_textView" />

                    <TextView
                        android:id="@+id/password_error_textView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:textColor="@color/red_color"
                        android:textSize="14sp"
                        android:visibility="@{viewModel.isValidPassword() ? View.INVISIBLE : View.VISIBLE}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/password_editText" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginBottom="14dp"
                    android:background="@drawable/button_round_corners_purple"
                    android:fontFamily="@font/roboto_medium"
                    android:letterSpacing="0.05"
                    android:text="@string/button_login"
                    android:textAllCaps="false" />
            </LinearLayout>

            <TextView
                android:id="@+id/register_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/roboto_medium"
                android:letterSpacing="0.05"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="10dp"
                android:text="@string/button_registration"
                android:textColor="@color/grey_color"
                app:layout_constraintBottom_toBottomOf="@+id/guideline_bottom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>